<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.undine.project_ooad.DetailActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/headdetail"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/textTitle"
            android:textStyle="bold"
            android:textColor="#00868B"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/textDate"
            android:textColor="#00868B"
            android:textSize="20dp" />

        <!--16515155-->
        <TextView
            android:id="@+id/textLocate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="Location"
            android:textColor="#00868B"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/DesLocate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/textLocation"
            android:layout_marginLeft="40dp"
            android:textSize="20dp" />


        <TextView
            android:id="@+id/textDes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:text="Description"
            android:textColor="#00868B"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/DesDes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/textDescription"
            android:layout_marginLeft="40dp"
            android:textSize="20dp" />



        <TextView
            android:id="@+id/textCon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Contact"
            android:layout_marginLeft="15dp"
            android:textColor="#00868B"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/DesCon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/textContact"
            android:layout_marginLeft="40dp"
            android:textSize="20dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="40dp"
                android:text="@string/textRate"
                android:textSize="25dp" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="0.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/headdetail"
        android:layout_alignStart="@+id/headdetail">

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:background="#C6ADAD"
            android:hint=" Add a comment..."
            android:textColorHint="#FFFFFF"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/buttoncomment"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00868B"
            android:text="Comment"
            android:layout_gravity="center"
            android:textSize="10dp"
            android:layout_weight="1"
            android:textColor="#FFFFFF" />



    </LinearLayout>


</RelativeLayout>
